bug 1154182 - enable native keybindings for graphene